# FormFyxer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  explore_labeling_docx.ipynb  lit_explorer.py  migration_plan.txt  mypy.ini  pdf_wrangling.py  promptfoo-quality.yaml  promptfoo-real-system.yaml  promptfooconfig.yaml  pyproject.toml  setup.py  test_passive_voice_detection.py
.github/workflows/: mypy_unittests.yml  publish.yml
data/: clf_field_names.joblib
dev-testing/: Dev.ipynb  Testing.ipynb  functions.ipynb  test package.ipynb  train classifier.ipynb
dev-testing/.ipynb_checkpoints/: Dev-checkpoint.ipynb  functions-checkpoint.ipynb  test package-checkpoint.ipynb  test-checkpoint.ipynb  train classifier-checkpoint.ipynb
formfyxer/: __init__.py  docassemble_support.py  docx_wrangling.py  lit_explorer.py  passive_voice_detection.py  pdf_wrangling.py  requirements.txt
formfyxer/data/: clf_field_names.joblib  gendered_terms.yml  included_fields.joblib  jurisdictions.joblib  plain_language.yml  simplified_words.yml
formfyxer/integration_tests/: interactive_test_api_key_resolution.py  interactive_test_passive_voice_detection.py  interactive_test_refactored_functions.py  test_individual_field_normalization.py  test_llm_field_renaming.py  test_normalize_name_with_context.py
formfyxer/keys/: openai_key.txt  openai_org.txt  spot_token.txt
formfyxer/prompts/: describe_form.txt  field_grouping.txt  field_labeling.txt  guess_form_name.txt  normalize_field_name.txt  passive_voice.txt  plain_language.txt
formfyxer/test_documents/: 93A_demand_letter_sample.docx  93A_demand_letter_sample.docx.output.docx  condo_deed.docx  condo_deed.docx.output.docx  estate_plan_letter_introduction.docx  estate_plan_letter_introduction.docx.output.docx  sample_security_deposit_letter.docx  sample_security_deposit_letter.docx.output.docx  used_car_sale_template.docx  used_car_sale_template.docx.output.docx  will_template.docx  will_template.docx.output.docx
formfyxer/tests/: cluster_test.py  field_renaming_dataset.csv  pdf_grouped_dataset.csv  test_docassemble_support.py  test_lit_explorer.py  test_lit_explorer_pdf_labeling.py  test_passive_voice_detection.py  test_pdf_labeling_rules.py
paper_data/: RateMyPDF Individual Form Expert Benchmarks(1-176).xlsx  analysis_requirements.txt  ratemypdf-stats.ipynb
scripts/: auto_fields_all.py  data_script.py
test_documents/: emergency_guardianship.docx  ~$A_demand_letter_sample.docx
