[build-system]
requires = ["setuptools>=40.0.0,<66", "pip", "spacy"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = '(__init__.py|setup.py)'

[tool.mypy]
exclude= '''(?x)(
    ^setup.py$
  )'''

[[tool.mypy.overrides]]
module="pikepdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pdfminer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="en_core_web_lg.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="en_core_web_md.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="en_core_web_sm.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="boxdetect.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="pdf2image.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="joblib.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="nltk.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="reportlab.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="cv2.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="textstat.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="PassivePySrc.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="sigfig.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="openai.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="tiktoken.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="transformers.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="eyecite.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="docx.*"
ignore_missing_imports=true
